gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
spec:
  selector:
    matchLabels:
      app: gateway-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: gateway-service:latest
        ports:
        - containerPort: 8001
