data-entry-getter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-entry-getter-service-deployment
spec:
  selector:
    matchLabels:
      app: data-entry-getter-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: data-entry-getter-service
    spec:
      containers:
      - name: data-entry-getter-service
        image: supanart2010/data-entry-getter-service:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: data-entry-getter-service
spec:
  selector:
    app: data-entry-getter-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
