dataset-mgmt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-mgmt-deployment
spec:
  selector:
    matchLabels:
      app: dataset-mgmt
  replicas: 1 
  template:
    metadata:
      labels:
        app: dataset-mgmt
    spec:
      containers:
      - name: dataset-mgmt
        image: supanart2010/dataset-mgmt-service:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dataset-mgmt-service
spec:
  selector:
    app: dataset-mgmt
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
