gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
spec:
  selector:
    matchLabels:
      app: gateway-service
  replicas: 1 
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: supanart2010/gateway-service:v2.1
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
