ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sds-ingress
spec:
  # ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 8001
